Update Best Fortnite Maps.html

--- a/Best Fortnite Maps.html
+++ b/Best Fortnite Maps.html
@@ -216,13 +216,38 @@ function setImage(imgEl,map,meta){
     tmp.onload = ()=>{ imgEl.src=url; imgEl.style.display='block'; imgEl.previousElementSibling.style.display='none'; };
 }
 
-/* --- Unregister any existing service workers --- */
-if ('serviceWorker' in navigator) {
-  navigator.serviceWorker.getRegistrations().then(regs => {
-    regs.forEach(reg => reg.unregister());
-    console.log('✅ All service workers unregistered');
-  });
+<script>
+const PUBLIC_VAPID_KEY = 'YOUR_PUBLIC_VAPID_KEY_HERE'; // replace later
+
+async function registerServiceWorker() {
+  if ('serviceWorker' in navigator) {
+    const reg = await navigator.serviceWorker.register('/sw.js');
+    console.log('SW registered:', reg);
+    await askPermission(reg);
+  }
 }
+
+async function askPermission(reg) {
+  const permission = await Notification.requestPermission();
+  if (permission !== 'granted') return console.log('Notifications blocked');
+
+  const sub = await reg.pushManager.subscribe({
+    userVisibleOnly: true,
+    applicationServerKey: urlBase64ToUint8Array(PUBLIC_VAPID_KEY)
+  });
+  console.log('Push subscription:', JSON.stringify(sub));
+  }
+
+function urlBase64ToUint8Array(base64String) {
+  const padding = '='.repeat((4 - base64String.length % 4) % 4);
+  const base64 = (base64String + padding).replace(/\-/g, '+').replace(/_/g, '/');
+  const rawData = atob(base64);
+  return Uint8Array.from([...rawData].map(char => char.charCodeAt(0)));
+}
+
+registerServiceWorker();
+</script>
+
 </script>
 </body>
 </html>
