--- a/Best Fortnite Maps.html
+++ b/Best Fortnite Maps.html
@@ -248,7 +248,7 @@ function setImage(imgEl,map,meta){
 
 /* --- PWA push setup --- */
 if ('serviceWorker' in navigator) {
-  navigator.serviceWorker.register('https://raw.githubusercontent.com/Internetperson-dev/site/refs/heads/main/sw.js');
+navigator.serviceWorker.register('/site/sw.js');
 }
 
 async function subscribePush() {
