Update Best Fortnite Maps.html

--- a/Best Fortnite Maps.html
+++ b/Best Fortnite Maps.html
@@ -248,7 +248,7 @@ function setImage(imgEl,map,meta){
   
 <script>
 if ('serviceWorker' in navigator) {
-  navigator.serviceWorker.register('./sw.js')
+  navigator.serviceWorker.register('/site/sw.js')  
     .then(() => console.log('✅ Service Worker registered successfully.'))
     .catch(err => console.error('❌ Service Worker registration failed:', err));
 }
